syntax = "proto3";

package project.planton.provider.aws.awsekscluster.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/aws/awsekscluster/v1/spec.proto";
import "project/planton/provider/aws/awsekscluster/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

// aws-eks-cluster
message AwsEksCluster {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'aws.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'AwsEksCluster'];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  AwsEksClusterSpec spec = 4 [(buf.validate.field).required = true];

  //status
  AwsEksClusterStatus status = 5;
}

// aws-eks-cluster status
message AwsEksClusterStatus {
  //stack-outputs
  //  aws-eks-cluster stack-outputs
  AwsEksClusterStackOutputs outputs = 1;
}
