syntax = "proto3";

package project.planton.provider.aws.ekscluster.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/aws/ekscluster/v1/enum.proto";

// EksClusterSpec is a message type that defines the specifications for a eks-cluster on Planton Cloud.
message EksClusterSpec {
  // valid aws region in which to create the eks-cluster.
  // warning: eks-cluster will recreated if this value is updated.
  // https://aws.amazon.com/about-aws/global-infrastructure/regions_az/
  string region = 1 [
    (buf.validate.field).required = true
  ];

  // (optional) id of the vpc to be used for creating eks-cluster.
  // if an id is not provided, a new vpc will be created.
  // warning: eks-cluster will be recreated if this is updated.
  string vpc_id = 2;

  // Security Groups for the EKS cluster
  repeated string security_groups = 3;

  // Subnets for the EKS cluster
  repeated string subnets = 4;

  // role arn for the EKS cluster
  string role_arn = 5 [
    (buf.validate.field).required = true
  ];

  // Worker Node Role ARN
  string node_role_arn = 6 [
    (buf.validate.field).required = true
  ];

  // Instance type for the EKS worker nodes
  string instance_type = 7 [
   (buf.validate.field).required = true
  ];

  // Desired size of the EKS worker node group
  int32 desired_size = 8;

  // Maximum size of the EKS worker node group
  int32 max_size = 9;

  // Minimum size of the EKS worker node group
  int32 min_size = 10;

  // aws eks worker node-groups management mode
  EksWorkersManagementMode workers_management_mode = 11 [
    (buf.validate.field).required = true
  ];
}